Fix scrollBar

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,17 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
+  outline: none;
+}
+
+::-webkit-scrollbar{
+  width: 5px;
+}
+
+::-webkit-scrollbar-thumb{
+  background-color: red;
+  border-radius: 50px;
 }
 
 html{
